--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+YelpConsumerKey = "EndNABrRb0blJHynBVFwhw"
+YelpConsumerSecret = "FI4B3R1kGhUV97ntxSKwoijabCE"
+YelpToken = "e4lgqsIpPX2OSd7rZrQgqYT9UOuI8iar"
+YelpTokenSecret = "iMwnsvEmszdHD3kErR5rymzn9uQ"
+
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
