setup model for spots

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,3 +78,6 @@ android {
 
     apply plugin: 'com.google.gms.google-services'
 }
+dependencies {
+    compile 'com.android.support:support-v4:24.+'
+}
