--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ android {
 
     apply plugin: 'com.neenbedankt.android-apt'
 
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
         testCompile 'junit:junit:4.12'
